[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Mine.gd" type="Script" id=1]
[ext_resource path="res://Models/flash.png" type="Texture" id=2]
[ext_resource path="res://Models/mina.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 269.151

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.3, 8 ),
"transitions": PoolRealArray( 1, 0.196146, 1, 0.101532 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Mine" type="Node2D"]
script = ExtResource( 1 )

[node name="Mina" type="Sprite" parent="."]
modulate = Color( 0.254902, 0.160784, 0.160784, 0.392157 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Flash" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -6, 1 )
scale = Vector2( 3, 3 )
z_index = 10
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/flash = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
